<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cacc_center</name>
  <version>1.0.0</version>
  <description>TODO</description>
  <maintainer email="ros2user@test.com">ROS User</maintainer>
  <license>BSD</license>
  <buildtool_depend>ament_cmake_ros</buildtool_depend>
  <depend>auna_its_msgs</depend>
  <depend>example_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
<!-- Generated on Tue Feb 21 12:19:05 2023 -->
